src/ExmiParser.java
// Generated from /home/brando/School/git/Kompilatory/Exmi.g4 by ANTLR 4.5.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ExmiParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, ID=15, COMMENT=16, INT=17, 
		BOOL=18, CHAR=19, STRING=20, MUL=21, DIV=22, ADD=23, SUB=24, EXP=25, OR=26, 
		AND=27, EQ=28, WS=29, LPAR=30, RPAR=31, LARR=32, RARR=33, LBLOCK=34, RBLOCK=35, 
		END_ST=36;
	public static final int
		RULE_init = 0, RULE_object = 1, RULE_arg_one = 2, RULE_arglist = 3, RULE_func_decl = 4, 
		RULE_func_def = 5, RULE_code = 6, RULE_if_block = 7, RULE_while_block = 8, 
		RULE_assigment = 9, RULE_declaration_global = 10, RULE_declaration = 11, 
		RULE_expression = 12, RULE_comment = 13;
	public static final String[] ruleNames = {
		"init", "object", "arg_one", "arglist", "func_decl", "func_def", "code", 
		"if_block", "while_block", "assigment", "declaration_global", "declaration", 
		"expression", "comment"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "','", "'return'", "'if'", "'else'", "'while'", "'='", "'%'", "'!='", 
		"'<'", "'>'", "'<='", "'>='", "'&&'", "'||'", null, null, null, null, 
		null, null, "'*'", "'/'", "'+'", "'-'", "'^'", null, null, "'=='", null, 
		"'('", "')'", "'['", "']'", "'{'", "'}'", "';'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, "ID", "COMMENT", "INT", "BOOL", "CHAR", "STRING", "MUL", 
		"DIV", "ADD", "SUB", "EXP", "OR", "AND", "EQ", "WS", "LPAR", "RPAR", "LARR", 
		"RARR", "LBLOCK", "RBLOCK", "END_ST"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Exmi.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ExmiParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class InitContext extends ParserRuleContext {
		public List<CommentContext> comment() {
			return getRuleContexts(CommentContext.class);
		}
		public CommentContext comment(int i) {
			return getRuleContext(CommentContext.class,i);
		}
		public List<Func_defContext> func_def() {
			return getRuleContexts(Func_defContext.class);
		}
		public Func_defContext func_def(int i) {
			return getRuleContext(Func_defContext.class,i);
		}
		public List<Func_declContext> func_decl() {
			return getRuleContexts(Func_declContext.class);
		}
		public Func_declContext func_decl(int i) {
			return getRuleContext(Func_declContext.class,i);
		}
		public List<TerminalNode> END_ST() { return getTokens(ExmiParser.END_ST); }
		public TerminalNode END_ST(int i) {
			return getToken(ExmiParser.END_ST, i);
		}
		public List<Declaration_globalContext> declaration_global() {
			return getRuleContexts(Declaration_globalContext.class);
		}
		public Declaration_globalContext declaration_global(int i) {
			return getRuleContext(Declaration_globalContext.class,i);
		}
		public InitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_init; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExmiVisitor ) return ((ExmiVisitor<? extends T>)visitor).visitInit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InitContext init() throws RecognitionException {
		InitContext _localctx = new InitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_init);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID || _la==COMMENT) {
				{
				setState(36);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(28);
					comment();
					}
					break;
				case 2:
					{
					{
					setState(29);
					func_decl();
					setState(30);
					match(END_ST);
					}
					}
					break;
				case 3:
					{
					{
					setState(32);
					declaration_global();
					setState(33);
					match(END_ST);
					}
					}
					break;
				case 4:
					{
					setState(35);
					func_def();
					}
					break;
				}
				}
				setState(40);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ObjectContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(ExmiParser.ID, 0); }
		public List<TerminalNode> LARR() { return getTokens(ExmiParser.LARR); }
		public TerminalNode LARR(int i) {
			return getToken(ExmiParser.LARR, i);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<TerminalNode> RARR() { return getTokens(ExmiParser.RARR); }
		public TerminalNode RARR(int i) {
			return getToken(ExmiParser.RARR, i);
		}
		public ObjectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_object; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExmiVisitor ) return ((ExmiVisitor<? extends T>)visitor).visitObject(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ObjectContext object() throws RecognitionException {
		ObjectContext _localctx = new ObjectContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_object);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(41);
			match(ID);
			setState(48);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(42);
					match(LARR);
					setState(43);
					expression(0);
					setState(44);
					match(RARR);
					}
					} 
				}
				setState(50);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Arg_oneContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(ExmiParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(ExmiParser.ID, i);
		}
		public List<TerminalNode> LARR() { return getTokens(ExmiParser.LARR); }
		public TerminalNode LARR(int i) {
			return getToken(ExmiParser.LARR, i);
		}
		public List<TerminalNode> RARR() { return getTokens(ExmiParser.RARR); }
		public TerminalNode RARR(int i) {
			return getToken(ExmiParser.RARR, i);
		}
		public Arg_oneContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arg_one; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExmiVisitor ) return ((ExmiVisitor<? extends T>)visitor).visitArg_one(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Arg_oneContext arg_one() throws RecognitionException {
		Arg_oneContext _localctx = new Arg_oneContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_arg_one);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			match(ID);
			setState(52);
			match(ID);
			setState(57);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==LARR) {
				{
				{
				setState(53);
				match(LARR);
				setState(54);
				match(RARR);
				}
				}
				setState(59);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArglistContext extends ParserRuleContext {
		public List<Arg_oneContext> arg_one() {
			return getRuleContexts(Arg_oneContext.class);
		}
		public Arg_oneContext arg_one(int i) {
			return getRuleContext(Arg_oneContext.class,i);
		}
		public ArglistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arglist; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExmiVisitor ) return ((ExmiVisitor<? extends T>)visitor).visitArglist(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArglistContext arglist() throws RecognitionException {
		ArglistContext _localctx = new ArglistContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_arglist);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(60);
				arg_one();
				setState(65);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__0) {
					{
					{
					setState(61);
					match(T__0);
					setState(62);
					arg_one();
					}
					}
					setState(67);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Func_declContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(ExmiParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(ExmiParser.ID, i);
		}
		public TerminalNode LPAR() { return getToken(ExmiParser.LPAR, 0); }
		public ArglistContext arglist() {
			return getRuleContext(ArglistContext.class,0);
		}
		public TerminalNode RPAR() { return getToken(ExmiParser.RPAR, 0); }
		public Func_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func_decl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExmiVisitor ) return ((ExmiVisitor<? extends T>)visitor).visitFunc_decl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Func_declContext func_decl() throws RecognitionException {
		Func_declContext _localctx = new Func_declContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_func_decl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			match(ID);
			setState(71);
			match(ID);
			setState(72);
			match(LPAR);
			setState(73);
			arglist();
			setState(74);
			match(RPAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Func_defContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(ExmiParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(ExmiParser.ID, i);
		}
		public TerminalNode LPAR() { return getToken(ExmiParser.LPAR, 0); }
		public ArglistContext arglist() {
			return getRuleContext(ArglistContext.class,0);
		}
		public TerminalNode RPAR() { return getToken(ExmiParser.RPAR, 0); }
		public TerminalNode LBLOCK() { return getToken(ExmiParser.LBLOCK, 0); }
		public CodeContext code() {
			return getRuleContext(CodeContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode END_ST() { return getToken(ExmiParser.END_ST, 0); }
		public TerminalNode RBLOCK() { return getToken(ExmiParser.RBLOCK, 0); }
		public Func_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func_def; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExmiVisitor ) return ((ExmiVisitor<? extends T>)visitor).visitFunc_def(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Func_defContext func_def() throws RecognitionException {
		Func_defContext _localctx = new Func_defContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_func_def);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(ID);
			setState(77);
			match(ID);
			setState(78);
			match(LPAR);
			setState(79);
			arglist();
			setState(80);
			match(RPAR);
			setState(81);
			match(LBLOCK);
			setState(82);
			code();
			setState(83);
			match(T__1);
			setState(84);
			expression(0);
			setState(85);
			match(END_ST);
			setState(86);
			match(RBLOCK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CodeContext extends ParserRuleContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<TerminalNode> END_ST() { return getTokens(ExmiParser.END_ST); }
		public TerminalNode END_ST(int i) {
			return getToken(ExmiParser.END_ST, i);
		}
		public List<AssigmentContext> assigment() {
			return getRuleContexts(AssigmentContext.class);
		}
		public AssigmentContext assigment(int i) {
			return getRuleContext(AssigmentContext.class,i);
		}
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public List<If_blockContext> if_block() {
			return getRuleContexts(If_blockContext.class);
		}
		public If_blockContext if_block(int i) {
			return getRuleContext(If_blockContext.class,i);
		}
		public List<While_blockContext> while_block() {
			return getRuleContexts(While_blockContext.class);
		}
		public While_blockContext while_block(int i) {
			return getRuleContext(While_blockContext.class,i);
		}
		public List<CommentContext> comment() {
			return getRuleContexts(CommentContext.class);
		}
		public CommentContext comment(int i) {
			return getRuleContext(CommentContext.class,i);
		}
		public CodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_code; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExmiVisitor ) return ((ExmiVisitor<? extends T>)visitor).visitCode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CodeContext code() throws RecognitionException {
		CodeContext _localctx = new CodeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_code);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__4) | (1L << ID) | (1L << COMMENT) | (1L << INT) | (1L << BOOL) | (1L << CHAR) | (1L << STRING) | (1L << ADD) | (1L << SUB) | (1L << LPAR) | (1L << END_ST))) != 0)) {
				{
				setState(100);
				switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
				case 1:
					{
					setState(88);
					expression(0);
					setState(89);
					match(END_ST);
					}
					break;
				case 2:
					{
					setState(91);
					assigment();
					setState(92);
					match(END_ST);
					}
					break;
				case 3:
					{
					setState(94);
					declaration();
					setState(95);
					match(END_ST);
					}
					break;
				case 4:
					{
					setState(97);
					if_block();
					}
					break;
				case 5:
					{
					setState(98);
					while_block();
					}
					break;
				case 6:
					{
					setState(99);
					comment();
					}
					break;
				}
				}
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class If_blockContext extends ParserRuleContext {
		public TerminalNode LPAR() { return getToken(ExmiParser.LPAR, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RPAR() { return getToken(ExmiParser.RPAR, 0); }
		public List<TerminalNode> LBLOCK() { return getTokens(ExmiParser.LBLOCK); }
		public TerminalNode LBLOCK(int i) {
			return getToken(ExmiParser.LBLOCK, i);
		}
		public List<CodeContext> code() {
			return getRuleContexts(CodeContext.class);
		}
		public CodeContext code(int i) {
			return getRuleContext(CodeContext.class,i);
		}
		public List<TerminalNode> RBLOCK() { return getTokens(ExmiParser.RBLOCK); }
		public TerminalNode RBLOCK(int i) {
			return getToken(ExmiParser.RBLOCK, i);
		}
		public If_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_if_block; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExmiVisitor ) return ((ExmiVisitor<? extends T>)visitor).visitIf_block(this);
			else return visitor.visitChildren(this);
		}
	}

	public final If_blockContext if_block() throws RecognitionException {
		If_blockContext _localctx = new If_blockContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_if_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(T__2);
			setState(106);
			match(LPAR);
			setState(107);
			expression(0);
			setState(108);
			match(RPAR);
			setState(109);
			match(LBLOCK);
			setState(110);
			code();
			setState(111);
			match(RBLOCK);
			setState(117);
			_la = _input.LA(1);
			if (_la==T__3) {
				{
				setState(112);
				match(T__3);
				setState(113);
				match(LBLOCK);
				setState(114);
				code();
				setState(115);
				match(RBLOCK);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class While_blockContext extends ParserRuleContext {
		public TerminalNode LPAR() { return getToken(ExmiParser.LPAR, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RPAR() { return getToken(ExmiParser.RPAR, 0); }
		public TerminalNode LBLOCK() { return getToken(ExmiParser.LBLOCK, 0); }
		public CodeContext code() {
			return getRuleContext(CodeContext.class,0);
		}
		public TerminalNode RBLOCK() { return getToken(ExmiParser.RBLOCK, 0); }
		public While_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_while_block; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExmiVisitor ) return ((ExmiVisitor<? extends T>)visitor).visitWhile_block(this);
			else return visitor.visitChildren(this);
		}
	}

	public final While_blockContext while_block() throws RecognitionException {
		While_blockContext _localctx = new While_blockContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_while_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(T__4);
			setState(120);
			match(LPAR);
			setState(121);
			expression(0);
			setState(122);
			match(RPAR);
			setState(123);
			match(LBLOCK);
			setState(124);
			code();
			setState(125);
			match(RBLOCK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssigmentContext extends ParserRuleContext {
		public ObjectContext object() {
			return getRuleContext(ObjectContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public AssigmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assigment; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExmiVisitor ) return ((ExmiVisitor<? extends T>)visitor).visitAssigment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssigmentContext assigment() throws RecognitionException {
		AssigmentContext _localctx = new AssigmentContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_assigment);
		try {
			setState(132);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(127);
				object();
				setState(128);
				match(T__5);
				setState(129);
				expression(0);
				}
				break;
			case END_ST:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declaration_globalContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(ExmiParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(ExmiParser.ID, i);
		}
		public Declaration_globalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration_global; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExmiVisitor ) return ((ExmiVisitor<? extends T>)visitor).visitDeclaration_global(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Declaration_globalContext declaration_global() throws RecognitionException {
		Declaration_globalContext _localctx = new Declaration_globalContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_declaration_global);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(ID);
			setState(135);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(ExmiParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(ExmiParser.ID, i);
		}
		public List<TerminalNode> LARR() { return getTokens(ExmiParser.LARR); }
		public TerminalNode LARR(int i) {
			return getToken(ExmiParser.LARR, i);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<TerminalNode> RARR() { return getTokens(ExmiParser.RARR); }
		public TerminalNode RARR(int i) {
			return getToken(ExmiParser.RARR, i);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExmiVisitor ) return ((ExmiVisitor<? extends T>)visitor).visitDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			match(ID);
			setState(138);
			match(ID);
			setState(145);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==LARR) {
				{
				{
				setState(139);
				match(LARR);
				setState(140);
				expression(0);
				setState(141);
				match(RARR);
				}
				}
				setState(147);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
